--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="./Assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <button>About Me</button>
+        <button>Work</button>
+        <h1>Blake Wright</h1>
+        <h2>Professional Portfolio</h2>
+        <button>Contact</button>
+        <button>Resume</button>
+      </nav>
+    </header>
+  </body>
 </html>
