added placeholder background image and cleaned up some more alignment

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header style="background-image: url(./Assets/images/pubgnewgun.jpg)">
       <nav>
         <button>About Me</button>
         <button>Work</button>
         <h1>Blake Wright</h1>
-        <h2>Professional Portfolio</h2>
         <button>Contact</button>
         <button>Resume</button>
       </nav>
+      <h2>Portfolio</h2>
     </header>
   </body>
 </html>
