added content section and some placeholder images for projects. still working on styling in grid to align properly

--- a/index.html
+++ b/index.html
@@ -13,11 +13,75 @@
       <nav>
         <button>About Me</button>
         <button>Work</button>
-        <h1>Blake Wright</h1>
+        <h1>Blake Wright<br />Portfolio</h1>
         <button>Contact</button>
         <button>Resume</button>
       </nav>
-      <h2>Portfolio</h2>
+      <!-- <h2>Portfolio</h2> -->
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
+        possimus expedita ratione, cum sed corporis magni iusto nulla, maxime
+        asperiores dolorem harum minus molestiae voluptatem quod iste. Expedita,
+        nulla a! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Excepturi exercitationem cupiditate, perferendis ut, itaque nesciunt vel
+        accusamus unde nemo tempore officiis recusandae, magnam modi
+        accusantium! Quas hic numquam inventore necessitatibus. Lorem ipsum
+        dolor sit amet consectetur, adipisicing elit. Rem magnam aliquid animi.
+        Veritatis totam porro, natus aliquam neque vitae suscipit aperiam harum
+        nihil, quam quia, ipsam ab soluta possimus nulla. Lorem, ipsum dolor sit
+        amet consectetur adipisicing elit. Et adipisci fuga nostrum beatae sit
+        eius temporibus quidem officiis facere. Doloribus, debitis quos
+        excepturi eligendi id iure. Tenetur suscipit quis hic.
+      </p>
     </header>
+    <main>
+      <h1>LATEST WORK</h1>
+      <section>
+        <ul class="projects">
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder1"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder2"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder3"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder4"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder5"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+          <li>
+            <img
+              src="./Assets/images/placeholder-image.png"
+              alt="placeholder6"
+              style="width: 260px; height: 140px"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
