general basis of 2nd section formatted and aligned

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <button>Contact</button>
         <button>Resume</button>
       </nav>
-      <!-- <h2>Portfolio</h2> -->
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
         possimus expedita ratione, cum sed corporis magni iusto nulla, maxime
@@ -36,48 +35,57 @@
     </header>
     <main>
       <h1>LATEST WORK</h1>
+      <div>
+        <img
+          id="bigimage"
+          src="./Assets/images/placeholder-image.png"
+          alt="placeholder-big"
+          style="height: fit-content"
+          style="width: fit-content"
+        />
+      </div>
       <section>
         <ul class="projects">
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder1"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder2"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder3"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder4"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder5"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
           <li>
             <img
               src="./Assets/images/placeholder-image.png"
               alt="placeholder6"
-              style="width: 260px; height: 140px"
+              style="width: 300px; height: 300px"
             />
           </li>
         </ul>
