added reset.css and generally created a base for the rest of the webpage. styling next

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./Assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="./Assets/css/reset.css" />
     <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>Document</title>
   </head>
@@ -35,7 +35,7 @@
     </header>
     <main>
       <h1>LATEST WORK</h1>
-      <div>
+      <div class="featured-work">
         <img
           id="bigimage"
           src="./Assets/images/placeholder-image.png"
@@ -44,7 +44,7 @@
           style="width: fit-content"
         />
       </div>
-      <section>
+      <section class="content">
         <ul class="projects">
           <li>
             <img
@@ -90,6 +90,15 @@
           </li>
         </ul>
       </section>
+      <section class="contact-me">
+        <p>Blake Wright 111-111-1111 btdubbzzz@gmail.com</p>
+        <p>Github</p>
+        <p>LinkedIn</p>
+        <p>Resume</p>
+      </section>
     </main>
+    <footer>
+      <p>Made by Blake Wright</p>
+    </footer>
   </body>
 </html>
