starting with a totally clean slate to focus on mobile first development

--- a/index.html
+++ b/index.html
@@ -1,104 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Assets/css/reset.css" />
-    <link rel="stylesheet" href="./Assets/css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header style="background-image: url(./Assets/images/pubgnewgun.jpg)">
-      <nav>
-        <button>About Me</button>
-        <button>Work</button>
-        <h1>Blake Wright<br />Portfolio</h1>
-        <button>Contact</button>
-        <button>Resume</button>
-      </nav>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis,
-        possimus expedita ratione, cum sed corporis magni iusto nulla, maxime
-        asperiores dolorem harum minus molestiae voluptatem quod iste. Expedita,
-        nulla a! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Excepturi exercitationem cupiditate, perferendis ut, itaque nesciunt vel
-        accusamus unde nemo tempore officiis recusandae, magnam modi
-        accusantium! Quas hic numquam inventore necessitatibus. Lorem ipsum
-        dolor sit amet consectetur, adipisicing elit. Rem magnam aliquid animi.
-        Veritatis totam porro, natus aliquam neque vitae suscipit aperiam harum
-        nihil, quam quia, ipsam ab soluta possimus nulla. Lorem, ipsum dolor sit
-        amet consectetur adipisicing elit. Et adipisci fuga nostrum beatae sit
-        eius temporibus quidem officiis facere. Doloribus, debitis quos
-        excepturi eligendi id iure. Tenetur suscipit quis hic.
-      </p>
-    </header>
-    <main>
-      <h1>LATEST WORK</h1>
-      <div class="featured-work">
-        <img
-          id="bigimage"
-          src="./Assets/images/placeholder-image.png"
-          alt="placeholder-big"
-          style="height: fit-content"
-          style="width: fit-content"
-        />
-      </div>
-      <section class="content">
-        <ul class="projects">
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder1"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder2"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder3"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder4"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder5"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-          <li>
-            <img
-              src="./Assets/images/placeholder-image.png"
-              alt="placeholder6"
-              style="width: 300px; height: 300px"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="contact-me">
-        <p>Blake Wright 111-111-1111 btdubbzzz@gmail.com</p>
-        <p>Github</p>
-        <p>LinkedIn</p>
-        <p>Resume</p>
-      </section>
-    </main>
-    <footer>
-      <p>Made by Blake Wright</p>
-    </footer>
-  </body>
+ <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./Assets/css/reset.css" />
+  <link rel="stylesheet" href="./Assets/css/style.css" />
+  <title>Document</title>
+ </head>
+ <body></body>
 </html>
