basic HTML structure created

--- a/index.html
+++ b/index.html
@@ -6,7 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./Assets/css/reset.css" />
   <link rel="stylesheet" href="./Assets/css/style.css" />
-  <title>Document</title>
+  <title>Portfolio: Blake Wright</title>
  </head>
- <body></body>
+ <body>
+  <header>
+   <nav>
+    <h1>Blake Wright</h1>
+    <h2>Portfolio</h2>
+   </nav>
+  </header>
+  <main>
+   <section id="about-me">
+    <h2>About Me</h2>
+    <p>
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+     voluptates, exercitationem nulla modi corrupti ipsam odio corporis fugit in
+     nostrum aliquid dicta sunt nobis esse tenetur eligendi ullam unde
+     similique!
+    </p>
+   </section>
+   <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+     <li>Project 1</li>
+     <li>Project 2</li>
+     <li>Project 3</li>
+     <li>Project 4</li>
+    </ul>
+   </section>
+   <section id="contact-me">
+    <h2>Contact Me</h2>
+    <p>Blake Wright</p>
+    <p>email address @ gmail.com</p>
+    <p>resume</p>
+    <p>ph #</p>
+   </section>
+  </main>
+  <footer>
+   <h2>Made by Blake Wright</h2>
+  </footer>
+ </body>
 </html>
