--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
  </head>
  <body>
   <header>
+   <h1>Blake Wright</h1>
+   <h2>Portfolio</h2>
    <nav>
-    <h1>Blake Wright</h1>
-    <h2>Portfolio</h2>
+    <ul>
+     <li><a href="#about-me"></a></li>
+     <li><a href="#projects"></a></li>
+     <li><a href="#contact-me"></a></li>
+    </ul>
    </nav>
+   <img src="./Assets/images/BlakeWright.jpg" alt="Blake Wright profile pic" />
   </header>
   <main>
    <section id="about-me">
@@ -28,10 +34,18 @@
    <section id="projects">
     <h2>Projects</h2>
     <ul>
-     <li>Project 1</li>
-     <li>Project 2</li>
-     <li>Project 3</li>
-     <li>Project 4</li>
+     <li>
+      <a href="#">Project 1</a>
+     </li>
+     <li>
+      <a href="#">Project 2</a>
+     </li>
+     <li>
+      <a href="#">Project 3</a>
+     </li>
+     <li>
+      <a href="#">Project 4</a>
+     </li>
     </ul>
    </section>
    <section id="contact-me">
