mobile structure completed and aligned

--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
    <h2>Portfolio</h2>
    <nav>
     <ul>
-     <li><a href="#about-me"></a></li>
-     <li><a href="#projects"></a></li>
-     <li><a href="#contact-me"></a></li>
+     <li>
+      <a href="#about-me">About Me</a>
+     </li>
+     <li>
+      <a href="#projects">Projects</a>
+     </li>
+     <li>
+      <a href="#contact-me">Contact Me</a>
+     </li>
     </ul>
    </nav>
-   <img src="./Assets/images/BlakeWright.jpg" alt="Blake Wright profile pic" />
   </header>
+  <img
+   src="./Assets/images/BlakeWright.jpg"
+   alt="Blake Wright profile pic"
+   class="responsive"
+  />
   <main>
    <section id="about-me">
     <h2>About Me</h2>
@@ -28,23 +38,71 @@
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
      voluptates, exercitationem nulla modi corrupti ipsam odio corporis fugit in
      nostrum aliquid dicta sunt nobis esse tenetur eligendi ullam unde
-     similique!
+     similique! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
+     hic esse cupiditate error enim sit vel laboriosam maxime tempore rerum
+     dolorum molestiae, quisquam, tempora expedita dolore maiores accusamus
+     nihil! In!
     </p>
    </section>
    <section id="projects">
     <h2>Projects</h2>
+    <div>
+     <img
+      src="./Assets/images/placeholder-image.png"
+      alt="featuredplaceholder"
+      id="featured-project"
+     />
+    </div>
     <ul>
      <li>
-      <a href="#">Project 1</a>
+      <figure>
+       <img
+        src="./Assets/images/placeholder-image.png"
+        alt="placeholder1"
+        class="responsive"
+       />
+       <figcaption>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
+        similique
+       </figcaption>
+      </figure>
      </li>
      <li>
-      <a href="#">Project 2</a>
+      <figure>
+       <img
+        src="./Assets/images/placeholder-image.png"
+        alt="placeholder2"
+        class="responsive"
+       />
+       <figcaption>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
+        similique
+       </figcaption>
+      </figure>
      </li>
      <li>
-      <a href="#">Project 3</a>
+      <figure>
+       <img
+        src="./Assets/images/placeholder-image.png"
+        alt="placeholder3"
+        class="responsive"
+       />
+       <figcaption>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
+       </figcaption>
+      </figure>
      </li>
      <li>
-      <a href="#">Project 4</a>
+      <figure>
+       <img
+        src="./Assets/images/placeholder-image.png"
+        alt="placeholder4"
+        class="responsive"
+       />
+       <figcaption>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
+       </figcaption>
+      </figure>
      </li>
     </ul>
    </section>
