added links to project images

--- a/index.html
+++ b/index.html
@@ -47,62 +47,77 @@
    <section id="projects">
     <h2>Projects</h2>
     <div>
-     <img
-      src="./Assets/images/placeholder-image.png"
-      alt="featuredplaceholder"
-      id="featured-project"
-     />
+     <figure>
+      <a href="http://google.com">
+       <img
+        src="./Assets/images/placeholder-image.png"
+        alt="featuredplaceholder"
+        id="featured-project"
+       />
+      </a>
+      <figcaption>Lorem ipsum, dolor sit amet</figcaption>
+     </figure>
     </div>
     <ul>
      <li>
-      <figure>
-       <img
-        src="./Assets/images/placeholder-image.png"
-        alt="placeholder1"
-        class="responsive"
-       />
-       <figcaption>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
-        similique
-       </figcaption>
-      </figure>
+      <a href="#">
+       <figure>
+        <img
+         src="./Assets/images/placeholder-image.png"
+         alt="placeholder1"
+         class="responsive"
+        />
+        <figcaption>
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+         sint similique
+        </figcaption>
+       </figure>
+      </a>
      </li>
      <li>
-      <figure>
-       <img
-        src="./Assets/images/placeholder-image.png"
-        alt="placeholder2"
-        class="responsive"
-       />
-       <figcaption>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
-        similique
-       </figcaption>
-      </figure>
+      <a href="#">
+       <figure>
+        <img
+         src="./Assets/images/placeholder-image.png"
+         alt="placeholder2"
+         class="responsive"
+        />
+        <figcaption>
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+         sint similique
+        </figcaption>
+       </figure>
+      </a>
      </li>
      <li>
-      <figure>
-       <img
-        src="./Assets/images/placeholder-image.png"
-        alt="placeholder3"
-        class="responsive"
-       />
-       <figcaption>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
-       </figcaption>
-      </figure>
+      <a href="#">
+       <figure>
+        <img
+         src="./Assets/images/placeholder-image.png"
+         alt="placeholder3"
+         class="responsive"
+        />
+        <figcaption>
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+         sint
+        </figcaption>
+       </figure>
+      </a>
      </li>
      <li>
-      <figure>
-       <img
-        src="./Assets/images/placeholder-image.png"
-        alt="placeholder4"
-        class="responsive"
-       />
-       <figcaption>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus sint
-       </figcaption>
-      </figure>
+      <a href="#">
+       <figure>
+        <img
+         src="./Assets/images/placeholder-image.png"
+         alt="placeholder4"
+         class="responsive"
+        />
+        <figcaption>
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+         sint
+        </figcaption>
+       </figure>
+      </a>
      </li>
     </ul>
    </section>
