restructured the about me section and started on adding content

--- a/index.html
+++ b/index.html
@@ -27,21 +27,18 @@
    </nav>
   </header>
   <main>
-   <img
-    src="./Assets/images/BlakeWright.jpg"
-    alt="Blake Wright profile pic"
-    class="responsive"
-   />
    <section id="about-me">
     <h2>About Me</h2>
+    <img
+     src="./Assets/images/BlakeWright.jpg"
+     alt="Blake Wright profile pic"
+     id="profile-pic"
+     class="responsive"
+    />
     <p>
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-     voluptates, exercitationem nulla modi corrupti ipsam odio corporis fugit in
-     nostrum aliquid dicta sunt nobis esse tenetur eligendi ullam unde
-     similique! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum
-     hic esse cupiditate error enim sit vel laboriosam maxime tempore rerum
-     dolorum molestiae, quisquam, tempora expedita dolore maiores accusamus
-     nihil! In!
+     My name is Blake Wright. I plan to become a professional web developer. I
+     am currently enrolled in a full stack bootcamp through the University of
+     Kansas. Below you can find some of my current projects and sample my work.
     </p>
    </section>
    <section id="projects">
@@ -124,9 +121,8 @@
    <section id="contact-me">
     <h2>Contact Me</h2>
     <p>Blake Wright</p>
-    <p>email address @ gmail.com</p>
-    <p>resume</p>
-    <p>ph #</p>
+    <p>wright.blake.t@gmail.com</p>
+    <p>913-284-1670</p>
    </section>
   </main>
   <footer>
