added the rest of the page content and project photos

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
      <figure>
       <a href="http://google.com">
        <img
-        src="./Assets/images/placeholder-image.png"
-        alt="featuredplaceholder"
+        src="./Assets/images/space.jpg"
+        alt="space photo"
         id="featured-project"
        />
       </a>
-      <figcaption>Lorem ipsum, dolor sit amet</figcaption>
+      <figcaption>Quantum Physics Engine</figcaption>
      </figure>
     </div>
     <ul>
@@ -60,14 +60,11 @@
       <a href="#">
        <figure>
         <img
-         src="./Assets/images/placeholder-image.png"
-         alt="placeholder1"
+         src="./Assets/images/calculator.jpeg"
+         alt="calculator photo"
          class="responsive"
         />
-        <figcaption>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-         sint similique
-        </figcaption>
+        <figcaption>Calculator JavaScript Application</figcaption>
        </figure>
       </a>
      </li>
@@ -75,14 +72,11 @@
       <a href="#">
        <figure>
         <img
-         src="./Assets/images/placeholder-image.png"
-         alt="placeholder2"
+         src="./Assets/images/python.png"
+         alt="python programming image"
          class="responsive"
         />
-        <figcaption>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-         sint similique
-        </figcaption>
+        <figcaption>I also know Python!</figcaption>
        </figure>
       </a>
      </li>
@@ -90,14 +84,11 @@
       <a href="#">
        <figure>
         <img
-         src="./Assets/images/placeholder-image.png"
-         alt="placeholder3"
+         src="./Assets/images/computer.jpg"
+         alt="computer photo"
          class="responsive"
         />
-        <figcaption>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-         sint
-        </figcaption>
+        <figcaption>It's literally a whole computer</figcaption>
        </figure>
       </a>
      </li>
@@ -105,14 +96,11 @@
       <a href="#">
        <figure>
         <img
-         src="./Assets/images/placeholder-image.png"
-         alt="placeholder4"
+         src="./Assets/images/comingsoon.jpg"
+         alt="coming soon image"
          class="responsive"
         />
-        <figcaption>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-         sint
-        </figcaption>
+        <figcaption>Stay tuned for my next project!</figcaption>
        </figure>
       </a>
      </li>
