finished some media query styling. header is currently broken

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
    <h2>Portfolio</h2>
    <nav>
     <ul>
-     <li>
+     <li id="order-1">
       <a href="#about-me">About Me</a>
      </li>
-     <li>
+     <li id="order-4">
       <a href="#projects">Projects</a>
      </li>
-     <li>
+     <li id="order-5">
       <a href="#contact-me">Contact Me</a>
      </li>
     </ul>
