fixed header formatting and made the featured project work on desktop size as well

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
  </head>
  <body>
   <header>
-   <h1>Blake Wright</h1>
-   <h2>Portfolio</h2>
+   <div id="page-title">
+    <h1>Blake Wright</h1>
+    <h2>Portfolio</h2>
+   </div>
    <nav>
     <ul>
      <li id="order-1">
