added webfont and finished remaining touches

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./Assets/css/reset.css" />
   <link rel="stylesheet" href="./Assets/css/style.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/tfj4hzw.css" />
   <title>Portfolio: Blake Wright</title>
  </head>
  <body>
@@ -113,6 +114,7 @@
     <p>Blake Wright</p>
     <p>wright.blake.t@gmail.com</p>
     <p>913-284-1670</p>
+    <p><a href="http://github.com/BTDubbzzz">My GitHub Page</a></p>
    </section>
   </main>
   <footer>
